Fixed overflow and scrolling bug

--- a/style.css
+++ b/style.css
@@ -115,9 +115,11 @@
 }
 
 form {
-  margin-top: 200px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin: 30vh 10vw;
+}
+
+.form-group .input-group-addon, .input-group .input-group-addon {
+  padding: 10px 10px 10px 18px;
 }
 
 @keyframes rain {
@@ -134,6 +136,11 @@ form {
 .content-center {
   height: 100vh;
   width: 100vw;
+}
+
+body {
+  height: 100vh;
+  overflow: hidden;
 }
 
 /* MEDIA QUERIES */
